--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,24 @@ body{
     border-radius: 10px;
 }
 
+.container-fluid-dark{
+    background-color: #0a66c2ff;
+    color:white;
+
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    padding-left: 20px;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
+
+    border: 1px solid #bfbffb;
+    border-radius: 10px;
+}
+
 h2{
     color: #0a66c2ff;
     text-decoration-line: underline;
@@ -29,6 +47,14 @@ h2{
 article{
     font-family: Arial, Helvetica, sans-serif;
     color: #5b5b5b;
+}
+
+img{
+   
+    border: 1px solid #bfbffb;
+    border-radius: 10px; 
+    padding-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 p{
